wiki/skins/custard/CSS/custard.css
/*
 * CSS Reset based on code from 
 * http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/
 * 
 * Earlier copy stated:
 * "If you want to use my reset styles, then feel free! It's all 
 * explicitly in the public domain (I have to formally say that 
 * or else people ask me about licensing)."
 */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-weight: inherit;
	font-style: inherit;
	font-size: 100%;
	font-family: inherit;
	vertical-align: baseline;
}

:focus {
	outline: 0;
}

html {
    height: 100%;
}

body {
	color: black;
	background: white;
    height: 100%;
}

ol, ul {
	list-style: none;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: separate;
	border-spacing: 0;
}

caption, th, td {
	text-align: left;
	font-weight: normal;
}

blockquote:before, blockquote:after, q:before, q:after {
	content: "";
}

blockquote, q {
	quotes: "" "";
}

.clear {
    clear: both;
}

/* Fix IE7's issue with interpolated scaling not turned on by default. Based on an idea from http://acidmartin.wordpress.com/2009/01/05/better-image-scaling-and-resampling-in-internet-explorer/ */
img {
	-ms-interpolation-mode: bicubic;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1em;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.75em;
}

h3 {
    font-size: 1.5em;
}

h4 {
    font-size: 1.25em;
}

h5 {
    font-size: 1em;
}

h6 {
    font-size: .75em;
}

/**************************************\
|--Custard Skin  Cascading Stylesheet--|
|--Written for use on Brickimedia.org--|
\**************************************/

/* General */
body {
    background: #3d9ec8;
    font-family: 'Segoe UI', sans-serif;
}

/* Toolbar */
#taskbar {
    position: fixed;
    width: 100%;
    min-height: 30px;
    background: white;
    top: 0;
    z-index: 2;
    box-shadow: 0 0 25px -10px black;
}

#taskbar .toggle {
    position: absolute;
    bottom: -15px;
    left: 0;
    right: 0;
    margin: 0 auto;
    background: white;
    width: 30px;
    height: 15px;
    border-radius: 0 0 5px 5px;
    cursor: pointer;
    box-shadow: 0 6px 10px -7px black;
    transition: background 200ms linear;
}

#taskbar .toggle .text {
    position: absolute;
    width: 30px;
    height: 15px;
    text-align: center;
    color: #BBB;
    line-height: 12px;
}

#taskbar .toggle .invert {
    position: absolute;
    width: 40px;
    height: 5px;
    margin-left: -5px;
    overflow: hidden;
}

#taskbar .toggle .invert::before {
    content: "";
    position: absolute;
    margin: -5px 0 0 -5px;
    width: 5px;
    height: 5px;
    background: transparent;
    border: 5px solid white;
    border-top-right-radius: 10px;
    transition: border 200ms linear;
}

#taskbar .toggle .invert::after {
    content: "";
    position: absolute;
    margin: -5px 0 0 30px;
    width: 5px;
    height: 5px;
    background: transparent;
    border: 5px solid white;
    border-top-left-radius: 10px;
    transition: border 200ms linear;
}

#taskbar .toggle:hover {
    background: #DFEDF6;
}

#taskbar .toggle:hover .invert::before, #taskbar .toggle:hover .invert::after {
    border-color: #DFEDF6;
}

#taskbar .notice {
    display: none;
    height: 20px;
    font-size: .75em;
    padding: 5px 60px;
    line-height: 20px;
}

#taskbar .notice, #taskbar .notice * {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

#actions {
    height: 30px;
    padding: 0 60px;
}

#actions .module {
    display: inline-block;
    height: 100%;
    float: left;
    text-align: center;
    line-height: 1.75em;
    background-image: -webkit-linear-gradient(bottom,#EEE 0px,transparent 15px);
    background-size: 150%;
    -webkit-transition: background 250ms linear;
}

#actions .module:hover {
    background-position-y: 100%;
}

#actions .module.wide {
    width: 30%;
}

#actions .module.medium {
    width: 15%;
}

#actions .module.narrow {
    width: 5%;
}

#actions .gear {
    margin-top: 5px;
}

/* Interwiki */
#interwiki {
    padding-top: 30px;
}

#interwiki .left {
    float: left;
    width: 50%;
    display: inline-block;
}

#interwiki .left .shell {
    padding-right: 100px;
}

#interwiki .mid {
    position: absolute;
    width: 200px;
    margin: 0 -100px;
    background: #BFDBEE;
    border-radius: 0 0 5px 5px;
    display: inline-block;
}

#interwiki .right {
    float: right;
    width: 50%;
    display: inline-block;
}

#interwiki .right .shell {
    padding-left: 100px;
}

#interwiki .left a, #interwiki .right a {
    width: 33.33%; /* calc() fallback */
    width: calc( 100% / 3 );
    height: 60px;
    line-height: 60px;
}

#interwiki .mid a {
    width: 100%;
    height: 80px;
    border-radius: 0 0 5px 5px;
    font-size: 125%;
    line-height: 80px;
}

#interwiki a {
    display: block;
    float: left;
    background: #BFDBEE;
    color: black;
    text-align: center;
    text-decoration: none;
    transition: background 200ms linear;
}

#interwiki a:hover {
    background: #DFEDF6;
}

#interwiki a:hover .invert::after {
    border-color: #DFEDF6;
}

#interwiki .left .shell div {
    float: right;
    text-align: left;
}

#interwiki .left .invert {
    position: absolute;
    width: 5px;
    height: 5px;
    margin: 60px 0 0 -5px;
    overflow: hidden;
}

#interwiki .left .invert::after {
    content: "";
    position: absolute;
    width: 5px;
    height: 5px;
    border: 5px solid #BFDBEE;  
    margin: -5px 0 0 -5px;
    border-top-right-radius: 10px;
    transition: border 200ms linear;
}

#interwiki .right .shell div {
    float: left;
    text-align: left;
}

#interwiki .right .invert {
    position: absolute;
    width: 5px;
    height: 5px;
    margin-top: 60px;
    overflow: hidden;
}

#interwiki .right .invert::after {
    content: "";
    position: absolute;
    width: 5px;
    height: 5px;
    border: 5px solid #BFDBEE;  
    margin: -5px 0 0 -5px;
    border-top-left-radius: 10px;
    transition: border 200ms linear;
}

/* Content */
#page {
    min-height: 100%; /* calc() fallback */
    min-height: calc( 100% - 210px );
    background: white;
    margin: 60px 0 0 60px;
    padding: 30px;
    border-top-left-radius: 5px;
}

#page h1, #page h2, #page h3, #page h4, #page h5, #page h6 {
    font-weight: normal;
}

#header {
    padding-bottom: 10px;
}

#tabs ul {
    position: absolute;
    font-size: .75em;
    line-height: 1.75em;
}

#tabs li {
    display: inline-block;
    margin: 0 10px;
    width: 100px;
    height: 20px;
}

#tabs a {
    background: #BFDBEE;
    color: black;
    width: 100%;
    height: 100%;
    border-radius: 5px 5px 0 0;
    text-decoration: none;
    text-align: center;
    transition: background 200ms linear;
    display: block;
}

#tabs li.selected a {
    background: white;
}

#tabs a:hover {
    background: #DFEDF6;
}

#tabs .top {
    margin-top: -50px;
}

#tabs .left {
    -webkit-transform: translateX(-100%) rotate(-90deg);
    -webkit-transform-origin: right top;
    margin-left: -50px;
}

#tabs .invert {
    position: absolute;  
    width: 110px;
    height: 5px;    
    margin: -5px;
    overflow: hidden;
    z-index: -1;
}

#tabs .invert::before {
    content: "";
    position: absolute;  
    margin: -5px 0 0 -5px;
    width: 5px;
    height: 5px;
    background: transparent;  
    border: 5px solid #BFDBEE;  
    border-bottom-right-radius: 10px;
    transition: border 200ms linear;
}

#tabs .invert::after {
    content: "";
    position: absolute;  
    margin: -5px 0 0 100px;
    width: 5px;
    height: 5px;
    background: transparent;  
    border: 5px solid #BFDBEE;
    border-bottom-left-radius: 10px;
    transition: border 200ms linear;
}

#tabs a:hover + .invert::before, #tabs a:hover + .invert::after {
    border-color: #DFEDF6;
}

.printfooter {
    display: none;
}

/* SocialProfile fixes */
.ns-2 #header {
	display: none;
}

/* Browser Fixes */
#embed_npwlo {
    display: none;
}

#temp {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: white;
    background-image: url('http://meta.brickimedia.org/skins/custard/Images/soon.jpg');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}

#temp .loader {
    position: absolute;
    width: 100%;
    height: 100%;
    background: #3d9ec8;
    text-align: center;
    color: white;
}

#temp .wrap {
    margin-top: 20%;
}

#temp .infobar {
    position: absolute;
    bottom: 0;
    width: 100%;
    background: #3d9ec8;
    border-radius: 5px 5px 0 0;
    color: white;
    text-align: left;
}

#temp .info {
    display: none;
    margin: 0 10px;
    background: white;
    color: black;
    border-radius: 5px 5px 0 0;
    padding: 5px 15px 10px;
}

#temp .tag {
    height: 50px;
    text-align: center;
    font-size: 2em;
    cursor: pointer;
}

#temp .return {
    text-align: center;
    font-size: .75em;
}

